--- a/mirror_sketch/index.html
+++ b/mirror_sketch/index.html
@@ -2,6 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <script src="p5.js"></script>
+  <script src="p5.dom.min.js"></script>
+  <script src="p5.sound.min.js"></script>
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
@@ -14,7 +18,6 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
   <script src="mirror_sketch.js"></script>
   <div id = 'webcam'>
   </div>
