--- a/mirror_sketch/index.html
+++ b/mirror_sketch/index.html
@@ -17,7 +17,7 @@
   </head>
   
   <body>
-    <script src="sketch.js"></script>
+    <script src="mirrror_sketch.js"></script>
     <div id = "webcam">
     </div>
   <iframe id = "spotify" src="https://open.spotify.com/embed/track/3cfOd4CMv2snFaKAnMdnvK" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
