--- a/jw_mirror/index.html
+++ b/jw_mirror/index.html
@@ -1,22 +1,54 @@
-<!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script src="p5.js"></script>
+  <script src="p5.dom.min.js"></script>
+  <script src="p5.sound.min.js"></script>
+
+  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+  <script language="javascript" type="text/javascript" src="p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>p5 camera</title>
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-  <script type="text/javascript" src="sketch.js"></script>
 </head>
 
 <body>
-<h1>This is a header</h1>
-<p> hello i am paragraph</p>
+<script src="sketch.js"></script>
+<div id = "webcam">
+</div>
+<iframe id = "spotify" src="https://open.spotify.com/embed/track/3cfOd4CMv2snFaKAnMdnvK" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe id = "calendar" src="https://calendar.google.com/calendar/embed?src=jowillgrubs%40gmail.com&ctz=America%2FChicago" style="border: 0" width="230" height="220" frameborder="0" scrolling="no" top="500"></iframe>
+<div id = "news" class="content">
+  <div class="simple-marquee-container">
+    <div class="marquee-sibling">
+      Some News
+    </div>
+    <div class="marquee">
+      <ul class="marquee-content-items">
+        <li>Man falls to his death in Washington state on mountain climbing trip with son</li>
+        <li>Dem Rep. says impeachment transcripts likely coming 'within the next five days'</li>
+        <li>White nationalists caught trying to film video in front of Emmett Till memorial</li>
+        <li>Walter Mercado, an iconic Puerto Rican astrologer and celebrity, dies at 88</li>
+        <li>Kenya's Jepkosgei and Kamworor win New York City Marathon</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="news.js"></script>
+
+<script>
+  $(function (){
+    $('.simple-marquee-container').SimpleMarquee();
+  });
+</script>
+</body>
+</html>
+
 
 </body>
 
