--- a/jw_mirror/index.html
+++ b/jw_mirror/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -46,6 +47,14 @@
     $('.simple-marquee-container').SimpleMarquee();
   });
 </script>
+
+<button class="btn" id="menu" ><i class="fa fa-navicon" style="font-size:48px"></i></button>
+<button class="btn" id="twit"><i class="fa fa-twitter" style="font-size:48px"></i></button>
+<button class="btn" id="face"><i class="fa fa-facebook" style="font-size:48px"></i></button>
+<button class="btn" id="spoti"><i class="fa fa-spotify" style="font-size:48px"></i></button>
+<button class="btn" id="you"><i class="fa fa-youtube-play" style="font-size:48px"></i></button>
+<button class="btn" id="newsy"><i class="fa fa-newspaper-o"style="font-size:48px"></i></button>
+</body>
 </body>
 </html>
 
